# dictionary

./: CMakeLists.txt  Makefile  QUICK_START_WINDOWS.md  README.md  README_WINDOWS.md  build.sh  build_windows.bat  build_windows.ps1  data.json  index.html  main.cpp  script.js  spdictionary  style.css
